# garage-bot

./: CLAUDE.md  LICENSE  bot.py  config.py  pyproject.toml  requirements.txt
actions/: docker_status.py  printer.py
commands/: __init__.py  status.py  ticket.py
