[tool.poetry]
package-mode = false

[project]
name = "garage-bot"
version = "0.1.0"
description = "Discord bot for the garage"
authors = [
    {name = "Matt Lewis"}
]
requires-python = "^3.12"
dependencies = [
    "discord-py (>=2.3.0)",
    "python-dotenv (>=1.0.0)",
    "python-escpos (>=3.1)",
    "pyusb (>=1.3.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
